tests/neg/import-from-named-tuple.scala
//> using scala 3.nightly

object Test:
  val p: (name: String, age: Int) = ???
  import p.name // error
